@@ -9,7 +9,6 @@ import com.nbicocchi.javafx.images.models.DogImage;
 import com.nbicocchi.javafx.images.models.DogResponse;
 import javafx.concurrent.Task;
 import javafx.embed.swing.SwingFXUtils;
-import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.control.Label;
 import javafx.scene.image.ImageView;
@@ -17,7 +16,8 @@ import javafx.scene.image.ImageView;
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -33,7 +33,7 @@ public class MainViewController {
         imageDisplayNode.setFitHeight(500);
     }
 
-    public void loadNewImage(ActionEvent event) {
+    public void loadNewImage() {
         Task<DogImage> t = getNextDogTask();
         t.setOnFailed(workerStateEvent -> System.out.println("Something wrong happened!"));
         t.setOnSucceeded(workerStateEvent -> {
@@ -48,10 +48,10 @@ public class MainViewController {
     public Task<DogImage> getNextDogTask() {
         return new Task<>() {
             @Override
-            protected DogImage call() throws UnirestException, IOException {
+            protected DogImage call() throws UnirestException, IOException, URISyntaxException {
                 HttpResponse<JsonNode> apiResponse = Unirest.get("https://dog.ceo/api/breeds/image/random").asJson();
                 DogResponse dogResponse = new Gson().fromJson(apiResponse.getBody().toString(), DogResponse.class);
-                BufferedImage image = ImageIO.read(new URL(dogResponse.message()));
+                BufferedImage image = ImageIO.read(new URI(dogResponse.message()).toURL());
                 return new DogImage(dogResponse.message(), image);
             }
         };
